vlib/v/checker/tests/generic_fn_generic_name_unresolved_err.vv
module main

fn func[T](arg string, val T) int {
	return 2
}

fn main() {
	_ := func[T]
	_ := {
		'test': func[T]
	}
	_ := {
		func[T]: 'test'
	}
}
